Fix release ZIP: use rsync to ensure correct plugin folder name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,18 +54,12 @@ jobs:
         env:
           VERSION: ${{ steps.get_version.outputs.version }}
         run: |
-          mkdir -p dist
-          zip -r "dist/lw-translate-${VERSION}.zip" . \
-            -x ".git/*" \
-            -x ".github/*" \
-            -x "dist/*" \
-            -x "builds/*" \
-            -x "composer.json" \
-            -x "composer.lock" \
-            -x "phpcs.xml.dist" \
-            -x "node_modules/*" \
-            -x ".gitignore" \
-            -x "*.log"
+          mkdir -p dist/lw-translate
+          rsync -av --exclude='.git' --exclude='.github' --exclude='dist' \
+            --exclude='builds' --exclude='composer.json' --exclude='composer.lock' \
+            --exclude='phpcs.xml.dist' --exclude='node_modules' --exclude='.gitignore' \
+            --exclude='*.log' . dist/lw-translate/
+          cd dist && zip -r "lw-translate-${VERSION}.zip" lw-translate/
 
       - name: Create tag and release
         if: steps.check_tag.outputs.exists == 'false'
